--- a/asset/style.css
+++ b/asset/style.css
@@ -7,19 +7,38 @@
 body {
 	background-color: #f9f9f9;
 	display: grid;
+	grid-template-rows: 1fr 5fr;
 	height: 100vh;
-	grid-template: 1fr 1fr 1fr 1fr/ 1fr 3fr 3fr 3fr;
-	grid-template-areas:
-		"side main main main "
-		"side main main main "
-		"side main main main "
-		"side main main main "
+}
+
+.infozone {
+	display: none;
+	animation: slidein 0.1s ease-in;
+}
+
+
+
+.details {
+	display: inline;
+	background-color: violet;
+
+}
+
+.cardzone {
+	padding: 1rem;
+	height: 85vh;
+	row-gap: 1rem;
+	display: grid;
+	column-gap: 1rem;
+	grid-template: 1fr 1fr 1fr 1fr/ 1fr 1fr 1fr 1fr 1fr;
 }
 
 span {
 	font-size: 32px;
 	font-weight: 800;
 }
+
+
 
 .card {
 	background-color: white;
@@ -31,22 +50,26 @@ span {
 	grid-template-rows: 1fr 3fr 1fr;
 }
 
-.main {
-	display: grid;
-	grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr 1fr;
-	margin: 1rem;
-	gap: 1rem;
-}
 
-
-#main {
-	background-color: #f9f9f9a6;
-	grid-area: main;
-}
-
-#side {
+.action_btn {
 	background-color: blue;
-	grid-area: side;
+	width: 3rem;
+	height: 3rem;
+	border-radius: 50%;
+	position: fixed;
+	box-shadow: 0 0 5px 0 #c9c9c9a9;
+	bottom: 1rem;
+	right: 1rem;
+}
+
+.button {
+	color: white;
+	text-align: center;
+	font-size: 3.3rem;
+	position: relative;
+	bottom: 0.4rem;
+	left: 0.5rem;
+	padding: 0 auto;
 }
 
 .modal {
@@ -63,4 +86,36 @@ span {
 	position: absolute;
 	top: 15%;
 	left: 3rem;
+}
+
+dialog[open] {
+	-webkit-animation: show 0.1s alternate;
+	animation: show 0.1s alternate;
+}
+
+@-webkit-keyframes slidein {
+	from {
+		transform: translateX(-100%);
+	}
+
+	to {
+		transform: translateX(1);
+	}
+}
+
+@-webkit-keyframes show {
+	from {
+		transform: scale(.4);
+	}
+
+	to {
+		transform: scale(1);
+	}
+}
+
+.form_content {
+	display: flex;
+	padding: 1rem;
+	flex-direction: column;
+	row-gap: 1rem;
 }
