--- a/asset/style.css
+++ b/asset/style.css
@@ -47,7 +47,7 @@ span {
 	padding: 0.5rem;
 	border-left: 0.2rem solid var(--light-color);
 	display: grid;
-	grid-template-rows: 1fr 3fr 1fr;
+	grid-template-rows: 1fr 2fr 1fr;
 }
 
 
@@ -118,4 +118,8 @@ dialog[open] {
 	padding: 1rem;
 	flex-direction: column;
 	row-gap: 1rem;
+}
+
+.read {
+	border-left: 0.5rem solid green;
 }
