--- a/asset/style.css
+++ b/asset/style.css
@@ -7,8 +7,17 @@
 body {
 	background-color: #f9f9f9;
 	display: grid;
-	grid-template-rows: 1fr 5fr;
+	grid-template-rows: 1fr 1fr 5fr;
 	height: 100vh;
+}
+
+.searchbar {
+	width: 50%;
+	padding: 0.7rem;
+	margin-top: 1rem;
+	margin-left: 25%;
+	border-radius: 5rem;
+
 }
 
 .infozone {
