--- a/asset/style.css
+++ b/asset/style.css
@@ -7,7 +7,7 @@
 body {
 	background-color: #f9f9f9;
 	display: grid;
-	grid-template-rows: 1fr 1fr 5fr;
+	grid-template-rows: 1fr 5fr;
 	height: 100vh;
 }
 
@@ -69,6 +69,18 @@ span {
 	box-shadow: 0 0 5px 0 #c9c9c9a9;
 	bottom: 1rem;
 	right: 1rem;
+	transition: 0.5s;
+}
+
+.action_btn:hover {
+	transform: scale(1.1);
+	background-color: white;
+
+	border: 0.1rem solid blue;
+
+	.button {
+		color: blue;
+	}
 }
 
 .button {
